    + [RA] Warn about duplicated words in the description.  Patch from
      Raphael Geissert.  (Closes: #424746)
  * checks/fields{,.desc}:
    + [FL] Do not complain about obsolete packages if there are
      non-obsolete alternatives specified and if the obsolete
      package is not listed first.  Issue an info tag for them
      though.  Patch by Adam D. Barratt.  (Closes: #486145)
  * checks/infofiles{,.desc}:
    + [ADB] Warn if the package's postinst installs info directory entries
      but the prerm doesn't remove them.  (Closes: #182512)
    + [ADB] Treat --remove-exactly as indicating removal of an info directory
      entry as well as --remove.
  * checks/menus{,.desc}:
    + [ADB] Check that menu-method files include menu.h (Closes: #184104)
  * checks/patch-systems{,.desc}:
    + [RA] Check quilt patches as well as dpatch patches, and also check
      quilt patches when using the 3.0 (quilt) package format.  Fix build
      dependency checking and check all dpatch files.  Patch from Raphaël
      Hertzog.  (Closes: #484549)
  * checks/rules{,.desc}:
    + [RA] Warn about use of DEB_BUILD_OPTS.  Patch from Raphael Geissert.
  * checks/scripts:
    + [FL] Apply File::Spec->canonpath() to rpaths to improve
      matching with directories.
    + [FL] Do not check zsh scripts, since zsh -n gives false
      positives.  Downgrades #485885 to wishlist.  Also see
      #175467.  Patch by Raphael Geissert.
    + [FL] Remove "quoted quotes". They're likely to be inside
      another pair of quotes; we're not interested in
      them for their own sake and removing them makes finding
      the limits of the outer pair far easier.  Patch by
      Adam D. Barratt.
    + [FL] Improve heredoc detection.  Patch by Adam D. Barratt.
    + [FL] Improve script_is_evil_and_wrong() to catch more scripts.
      Patch by Adam D. Barratt.
    + [ADB] Update bashism regexes to add new checks, improve performance
      and reduce false positives.