@@ -60,6 +60,15 @@ W: filenames: binary-without-manpage usr/bin/X11/testxbin
 W: filenames: binary-without-manpage usr/bin/mh/read
 W: filenames: debian-news-file-not-compressed usr/share/doc/filenames/NEWS.Debian
 W: filenames: desktop-file-in-wrong-dir usr/share/gnome/apps/System/foo.desktop
+W: filenames: embedded-javascript-library usr/share/filenames/jquery.js
+W: filenames: embedded-javascript-library usr/share/filenames/jquery.lite.js
+W: filenames: embedded-javascript-library usr/share/filenames/jquery.min.js
+W: filenames: embedded-javascript-library usr/share/filenames/jquery.pack.js
+W: filenames: embedded-javascript-library usr/share/filenames/mochikit.js
+W: filenames: embedded-javascript-library usr/share/filenames/prototype-1.2.3.4.js
+W: filenames: embedded-javascript-library usr/share/filenames/prototype.js
+W: filenames: embedded-javascript-library usr/share/filenames/prototype.js.gz
+W: filenames: embedded-javascript-library usr/share/filenames/scriptaculous.js
 W: filenames: executable-not-elf-or-script ./usr/bin/bin/bad
 W: filenames: executable-not-elf-or-script ./usr/bin/mh/read
 W: filenames: extra-license-file usr/share/pixmaps/COPYING
